# Hannel

./: .gitignore  Hannel.cabal  LICENSE  README.md
src/: Main.hs
src/Control/Concurrent/: Channel.hs  Event.hs  Hannel.hs  Process.hs  RoundChannel.hs  SwapChannel.hs
src/Control/Concurrent/Channel/: Class.hs  Round.hs  Swap.hs
src/Control/Concurrent/Event/: Base.hs  Class.hs  SyncLock.hs  Trail.hs
src/Control/Concurrent/Hannel/: Channel.hs  Event.hs  EventHandle.hs  Process.hs  RoundChannel.hs  SwapChannel.hs  SyncLock.hs  Trail.hs  Var.hs
src/Control/Concurrent/Hannel/Channel/: Broadcast.hs  Buffer.hs  Class.hs  Round.hs  Swap.hs
src/Control/Concurrent/Hannel/Event/: Base.hs  Class.hs  Handle.hs  Sync.hs  SyncLock.hs  Time.hs  Trail.hs
src/Control/Concurrent/Hannel/Internal/: Channel.hs  Condition.hs  Event.hs  SwapChannel.hs  SyncLock.hs  Trail.hs
src/Control/Concurrent/Hannel/Var/: Buffer.hs  Class.hs  Immutable.hs  Mutable.hs
src/Control/Concurrent/Singular/: Channel.hs  Event.hs  IVar.hs
src/Control/Concurrent/Singular/Event/: Base.hs  Primitive.hs  Status.hs
src/Control/Concurrent/Singular/Primitive/: Channel.hs  Condition.hs  Event.hs  Status.hs
src/Control/Concurrent/Transactional/: Channel.hs  Event.hs  EventHandle.hs  Var.hs
src/Control/Concurrent/Transactional/Channel/: Broadcast.hs  Round.hs  Swap.hs
src/Control/Concurrent/Transactional/Event/: Base.hs  Class.hs  SyncLock.hs  Time.hs  Trail.hs
src/Control/Concurrent/Transactional/Var/: Buffer.hs  Class.hs  Immutable.hs  Mutable.hs
src/Data/List/: Util.hs
