name:                Hannel
version:             0.1.0.0
synopsis:            Synchronous channels with a monadic interface.
homepage:            https://github.com/YellPika/Hannel
license:             MIT
license-file:        LICENSE
author:              YellPika
maintainer:          yellpika@gmail.com
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Concurrent.Hannel.Channel,
                       Control.Concurrent.Hannel.Channel.Round,
                       Control.Concurrent.Hannel.Channel.Swap,
                       Control.Concurrent.Hannel.Event,
                       Control.Concurrent.Hannel.Event.Class,
                       Control.Concurrent.Hannel.EventHandle,
                       Control.Concurrent.Hannel.Var,
                       Control.Concurrent.Hannel.Var.Buffer,
                       Control.Concurrent.Hannel.Var.Class,
                       Control.Concurrent.Hannel.Var.Mutable,
                       Control.Concurrent.Hannel.Var.Immutable

  other-modules:       Control.Concurrent.Hannel.Event.Base,
                       Control.Concurrent.Hannel.Event.SyncLock,
                       Control.Concurrent.Hannel.Event.Time,
                       Control.Concurrent.Hannel.Event.Trail

  build-depends:       base >= 4 && < 5, array, containers, mtl, random, time
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -threaded
