name:                Hannel
version:             0.1.0.0
synopsis:            Synchronous channels with a monadic interface.
homepage:            https://github.com/YellPika/Hannel
license:             MIT
license-file:        LICENSE
author:              YellPika
maintainer:          yellpika@gmail.com
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Concurrent.Singular.Channel,
                       Control.Concurrent.Singular.Event,
                       Control.Concurrent.Singular.IVar,
                       Control.Concurrent.Transactional.Channel,
                       Control.Concurrent.Transactional.Channel.Broadcast,
                       Control.Concurrent.Transactional.Channel.Round,
                       Control.Concurrent.Transactional.Channel.Swap,
                       Control.Concurrent.Transactional.Event,
                       Control.Concurrent.Transactional.Event.Class,
                       Control.Concurrent.Transactional.EventHandle,
                       Control.Concurrent.Transactional.Var,
                       Control.Concurrent.Transactional.Var.Buffer,
                       Control.Concurrent.Transactional.Var.Class,
                       Control.Concurrent.Transactional.Var.Mutable,
                       Control.Concurrent.Transactional.Var.Immutable
  other-modules:       Control.Concurrent.Singular.Event.Base,
                       Control.Concurrent.Singular.Event.Primitive,
                       Control.Concurrent.Singular.Event.Status,
                       Control.Concurrent.Transactional.Event.Base,
                       Control.Concurrent.Transactional.Event.SyncLock,
                       Control.Concurrent.Transactional.Event.Time,
                       Control.Concurrent.Transactional.Event.Trail,
                       Data.List.Util

  build-depends:       base >= 4 && < 5, array, containers, ghc-prim, mtl, random, time
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -threaded
